[package]
name = "actix_server"
version = "0.1.0"
authors = ["jawwadturabi <memonjawwad9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.0"
serde = "1.0.106"
listenfd = "0.3.3"
bson = "0.14.1"
mongodb = "0.9.2"
serde_json = "1.0.51"

